# JOfotara

./: README.md  pyproject.toml
jo_fotara/: hooks.py  modules.txt  patches.txt  utils.py
jo_fotara/fixtures/: country_subentity_code.json  custom_html_block.json  identification_types.json  tax_category.json
jo_fotara/fotara/: invoice.py  number_card.py  utils.py
jo_fotara/fotara/classes/: data.py  validate.py  xml.py
jo_fotara/fotara/data/: structure.xml
jo_fotara/jo_fotara/dashboard_chart/jofotara_status/: jofotara_status.json
jo_fotara/jo_fotara/dashboard_chart_source/fotara_status/: fotara_status.js  fotara_status.json  fotara_status.py
jo_fotara/jo_fotara/doctype/country_subentity_code/: country_subentity_code.js  country_subentity_code.json  country_subentity_code.py  test_country_subentity_code.py
jo_fotara/jo_fotara/doctype/identification_types/: identification_types.js  identification_types.json  identification_types.py  test_identification_types.py
jo_fotara/jo_fotara/doctype/jofotara__settings/: jofotara__settings.js  jofotara__settings.json  jofotara__settings.py  test_jofotara__settings.py
jo_fotara/jo_fotara/doctype/jofotara_configration/: jofotara_configration.js  jofotara_configration.json  jofotara_configration.py  test_jofotara_configration.py
jo_fotara/jo_fotara/doctype/jofotara_logs/: jofotara_logs.js  jofotara_logs.json  jofotara_logs.py  test_jofotara_logs.py
jo_fotara/jo_fotara/workspace/jofotara/: jofotara.json
jo_fotara/patches/: fix_missing_doctypes.py
jo_fotara/public/js/: sales_invoice.js
jo_fotara/startup/: boot.py
(+7 files in other folders)
