[project]
name = "jo_fotara"
authors = [
    { name = "Basel Waheed", email = "baselwaheed66@gmail.com"}
]
description = "Integration With Jo Fotara in Jordon"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "lxml~=5.3.1"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
